Code-for-Repos/gcp-oidc-gitops-app-repo/kustomize/base/myapp1-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-service
spec:
  type: ClusterIP
  selector:
    app: myapp1-pod
  ports:
  - name: http
    port: 80
    targetPort: 80
