Code-for-Repos/gcp-oidc-gitops-app-repo/kustomize/base/myapp1-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
        namespaces:
          from: Same

# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.Gateway

# kubectl get gatewayclass
# kubectl get gtw
# kubectl get httproute
